charts/templates/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bioacoustics-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bioacoustics-api
  template:
    metadata:
      labels:
        app: bioacoustics-api
    spec:
      containers:
      - name: bioacoustics-api
        image: gcr.io/a2o-search-prod/bioacoustics-api:latest
        command: ["gunicorn"]
        args: ["--bind", "0.0.0.0:8000", "--access-logfile", "-", "bioacoustics.wsgi:application"]
        ports:
        - containerPort: 8000
      nodeSelector:
      imagePullSecrets:
      - name: a2o-search-prod-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: bioacoustics-api-service
spec:
  selector:
    app: bioacoustics-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
