charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bioacoustics-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.bioacoustics.ds.io
    - embed.bioacoustics.ds.io
    secretName: bioacoustics-tls
  rules:
  - host: api.bioacoustics.ds.io
    http:
      paths:
      - backend:
          service:
            name: bioacoustics-api-service
            port:
              number: 8000
        path: /
        pathType: Prefix
  - host: embed.bioacoustics.ds.io
    http:
      paths:
      - backend:
          service:
            name: bioacoustics-embed-service
            port:
              number: 80
        path: /
        pathType: Prefix
